[build-system]
requires = [
    "setuptools>=75.1.0",
    "wheel",
    "numpy>=1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "cartastar2d"
version = "0.1.0"
description = "python wrapper for C++ A* algorithm implementation"
keywords = ["pyastar", "pyastar2d", "astar", "A*"]
readme = "README.md"
# readme-content-type = "text/markdown"
authors = [
    { name = "Hendrik Weideman", email = "hjweide@gmail.com" }
]
maintainers = [
    { name = "Dylan Frost", email = "dylan.frost@cart.com" }
]
dependencies = [
    "imageio",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://cart.com"
Documentation = "https://github.com/hjweide/pyastar2d"

[tool.distutils.bdist_wheel]
universal = true

# [tool.setuptools]
# ext-modules = [
#     {name = "mylib.foo", sources = ["foo.c"]}
# ]

# [tool.setuptools]
# ext-modules = [
#     {name = "pyastar2d.astar", sources = ["src/cpp/astar.cpp", "src/cpp/experimental_heuristics.cpp"], include-dirs=["src/cpp", "numpy"], extra-compile-args=["-O3", "-Wall", "-shared", "-fpic"]}
# ]
